--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: swift build -v
+      run: xcodebuild build -scheme ImageClassifier -sdk iphonesimulator
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -scheme ImageClassifier -sdk iphonesimulator
