--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,7 @@
-# This workflow will build a Swift project
+# This workflow builds and tests the Swift projects in the repository
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: Swift
+name: Swift CI
 
 on:
   push:
@@ -10,15 +10,74 @@ on:
     branches: [ "testing/joshua" ]
 
 jobs:
-  build:
-
+  # --- Job for the ImageClassifier project ---
+  image-classifier:
+    name: Build and Test ImageClassifier
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Download models
+      run: ./image_classification/RunScripts/download_models.sh
+
+    - name: Install CocoaPods
       working-directory: ./image_classification
-      run: xcodebuild build -scheme ImageClassifier -sdk iphonesimulator
-    - name: Run tests
+      run: pod install
+
+    - name: Build ImageClassifier
       working-directory: ./image_classification
-      run: xcodebuild test -scheme ImageClassifier -sdk iphonesimulator
+      run: xcodebuild build -workspace ImageClassifier.xcworkspace -scheme ImageClassifier -sdk iphonesimulator
+
+    - name: Test ImageClassifier
+      working-directory: ./image_classification
+      run: xcodebuild test -workspace ImageClassifier.xcworkspace -scheme ImageClassifier -sdk iphonesimulator
+
+  # --- Job for the FaceDetector project ---
+  face-detector:
+    name: Build and Test FaceDetector
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Download models
+      run: ./face_detector/RunScripts/download_models.sh
+      
+    - name: Install CocoaPods
+      working-directory: ./face_detector
+      run: pod install
+
+    - name: Build FaceDetector
+      working-directory: ./face_detector
+      run: xcodebuild build -workspace FaceDetector.xcworkspace -scheme FaceDetector -sdk iphonesimulator
+
+    - name: Test FaceDetector
+      working-directory: ./face_detector
+      run: xcodebuild test -workspace FaceDetector.xcworkspace -scheme FaceDetector -sdk iphonesimulator
+
+  # --- Job for the ObjectDetector project ---
+  object-detector:
+    name: Build and Test ObjectDetector
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Download models
+      run: ./object_detection/RunScripts/download_models.sh
+
+    - name: Install CocoaPods
+      working-directory: ./object_detection
+      run: pod install
+
+    - name: Build ObjectDetector
+      working-directory: ./object_detection
+      run: xcodebuild build -workspace ObjectDetector.xcworkspace -scheme ObjectDetector -sdk iphonesimulator
+
+    - name: Test ObjectDetector
+      working-directory: ./object_detection
+      run: xcodebuild test -workspace ObjectDetector.xcworkspace -scheme ObjectDetector -sdk iphonesimulator
