--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "testing/joshua" ]
 
 jobs:
-  # --- Job for the ImageClassifier project ---
+# --- Job for the ImageClassifier project ---
   image-classifier:
     name: Build and Test ImageClassifier
     runs-on: macos-latest
@@ -28,11 +28,23 @@ jobs:
 
     - name: Build ImageClassifier
       working-directory: ./image_classification
-      run: xcodebuild build -workspace ImageClassifier.xcworkspace -scheme ImageClassifier -sdk iphonesimulator
+      # Added -destination to specify a concrete device
+      run: >-
+        xcodebuild build
+        -workspace ImageClassifier.xcworkspace
+        -scheme ImageClassifier
+        -sdk iphonesimulator
+        -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=latest'
 
     - name: Test ImageClassifier
       working-directory: ./image_classification
-      run: xcodebuild test -workspace ImageClassifier.xcworkspace -scheme ImageClassifier -sdk iphonesimulator
+      # Added -destination to specify a concrete device for testing
+      run: >-
+        xcodebuild test
+        -workspace ImageClassifier.xcworkspace
+        -scheme ImageClassifier
+        -sdk iphonesimulator
+        -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=latest'
 
   # --- Job for the FaceDetector project ---
   face-detector:
