--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download models
-      run: ./image_classification/RunScripts/download_models.sh
+      working-directory: ./image_classification
+      run: ./RunScripts/download_models.sh
 
     - name: Install CocoaPods
       working-directory: ./image_classification
@@ -28,23 +29,21 @@ jobs:
 
     - name: Build ImageClassifier
       working-directory: ./image_classification
-      # Added -destination to specify a concrete device
       run: >-
         xcodebuild build
         -workspace ImageClassifier.xcworkspace
         -scheme ImageClassifier
         -sdk iphonesimulator
-        -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=latest'
+        -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=latest'
 
     - name: Test ImageClassifier
       working-directory: ./image_classification
-      # Added -destination to specify a concrete device for testing
       run: >-
         xcodebuild test
         -workspace ImageClassifier.xcworkspace
         -scheme ImageClassifier
         -sdk iphonesimulator
-        -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=latest'
+        -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=latest'
 
   # --- Job for the FaceDetector project ---
   face-detector:
